force-app/main/default/objects/Engagement_Internal_Team__c/Engagement_Internal_Team__c.object-meta.xml
<CustomObject>
    <description>Custom object to track Houlihan Lokey employees that are staffed on an engaged deal/project.</description>
    <label>Engagement Internal Team</label>
    <nameField>
        <displayFormat>EIT-{000000}</displayFormat>
        <label>Internal Team #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Internal Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>