force-app/main/default/objects/Engagement_Internal_Team__c/fields/Active_On_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Active_On_Engagement__c</fullName>
    <formula>OR( 
ISBLANK( End_Date__c ), 
AND( 
NOT( ISBLANK( End_Date__c )), 
TODAY() &lt; End_Date__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active On Engagement</label>
    <type>Checkbox</type>
</CustomField>