force-app/main/default/objects/Engagement_Internal_Team__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <formula>IF(
Contact__r.Registered__c = FALSE, &quot;NON-REGISTERED&quot;, null)</formula>
    <label>Alert</label>
    <type>Text</type>
</CustomField>