force-app/main/default/objects/Engagement_Internal_Team__c/fields/Allocation_Office__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Office__c</fullName>
    <description>Used in assigning the Engagement Office Splits</description>
    <formula>BLANKVALUE(Contact__r.Revenue_Allocation__c,  Office__c)</formula>
    <label>zz_Allocation Office</label>
    <type>Text</type>
</CustomField>