force-app/main/default/objects/Engagement_Internal_Team__c/fields/Contact_LOB__c.field-meta.xml
<CustomField>
    <fullName>Contact_LOB__c</fullName>
    <formula>TEXT(Contact__r.Line_of_Business__c)</formula>
    <label>Contact LOB</label>
    <type>Text</type>
</CustomField>