force-app/main/default/objects/Engagement_Internal_Team__c/fields/Contact_Office__c.field-meta.xml
<CustomField>
    <fullName>Contact_Office__c</fullName>
    <formula>TEXT(Contact__r.Office__c)</formula>
    <label>Contact Office</label>
    <type>Text</type>
</CustomField>