force-app/main/default/objects/Engagement_Internal_Team__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <formula>Contact__r.Title</formula>
    <label>Contact Title</label>
    <type>Text</type>
</CustomField>