force-app/main/default/objects/Engagement_Internal_Team__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Contact&apos;s Department as Point in Time</description>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>