force-app/main/default/objects/Engagement_Internal_Team__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>HL Team</relationshipLabel>
    <relationshipName>Engagement_Teams</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>