force-app/main/default/objects/Engagement_Internal_Team__c/fields/ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID__c</fullName>
    <description>Id for the project team record in ERP</description>
    <label>ERP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>