force-app/main/default/objects/Engagement_Internal_Team__c/fields/ERP_Last_Integration_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Error_Code__c</fullName>
    <label>ERP Last Integration Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>