force-app/main/default/objects/Engagement_Internal_Team__c/fields/ERP_Last_Integration_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Response_Date__c</fullName>
    <label>ERP Last Integration Response Date</label>
    <type>DateTime</type>
</CustomField>