force-app/main/default/objects/Engagement_Internal_Team__c/fields/ERP_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Id__c</fullName>
    <description>Id of the project in ERP</description>
    <formula>Engagement__r.Opportunity__r.ERP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Id of the project in ERP</inlineHelpText>
    <label>ERP Project Id</label>
    <type>Text</type>
</CustomField>