force-app/main/default/objects/Engagement_Internal_Team__c/fields/ERP_Submitted_To_Sync__c.field-meta.xml
<CustomField>
    <fullName>ERP_Submitted_To_Sync__c</fullName>
    <label>ERP Submitted To Sync</label>
    <type>DateTime</type>
</CustomField>