force-app/main/default/objects/Engagement_Internal_Team__c/fields/Industry_Group_REPORTING__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_REPORTING__c</fullName>
    <formula>Contact__r.Industry_Group_REPORTING__c</formula>
    <label>Industry Group REPORTING</label>
    <type>Text</type>
</CustomField>