force-app/main/default/objects/Engagement_Internal_Team__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Holds the legal entity object for the internal team member when the person is added to the internal team</description>
    <label>Legal Entity</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>Engagement Internal Teams</relationshipLabel>
    <relationshipName>Engagement_Internal_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>