force-app/main/default/objects/Engagement_Internal_Team__c/fields/Office_Revenue_Split__c.field-meta.xml
<CustomField>
    <fullName>Office_Revenue_Split__c</fullName>
    <label>Office Revenue Split</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>