force-app/main/default/objects/Engagement_Internal_Team__c/fields/Opportunity_ERP_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ERP_Id__c</fullName>
    <label>Opportunity ERP Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>