force-app/main/default/objects/Engagement_Internal_Team__c/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <formula>Contact__r.Registered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered</label>
    <type>Checkbox</type>
</CustomField>