force-app/main/default/objects/Engagement_Internal_Team__c/fields/Report_Contact_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Contact_Fields__c</fullName>
    <formula>Contact__r.Contact_Full_Name__c + &apos;|01|&apos; +  Contact__r.FirstName  + &apos;|02|&apos; + Contact__r.MiddleName + &apos;|03|&apos; + Contact__r.LastName + &apos;|04|&apos; + Contact__r.Initials__c  + &apos;|05|&apos; + TEXT(Contact__r.Office__c) + &apos;|06|&apos; +  Contact__r.Title  + &apos;|07|&apos; +  TEXT(Contact__r.Line_of_Business__c) + &apos;|08|&apos; + Contact__r.Department + &apos;|09|&apos; +  Contact__r.Email  + &apos;|10|&apos; +  Contact__r.Phone  + &apos;|11|&apos; +  Contact__r.Industry_Group_REPORTING__c  + &apos;|12|&apos; +  Contact__r.Industry_Umbrella_REPORTING__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Contact Fields</label>
    <type>Text</type>
</CustomField>