force-app/main/default/objects/Engagement_Internal_Team__c/fields/Revenue_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Allocation__c</fullName>
    <label>Revenue Allocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>