force-app/main/default/objects/Engagement_Internal_Team__c/fields/Staff_Revenue_Split__c.field-meta.xml
<CustomField>
    <fullName>Staff_Revenue_Split__c</fullName>
    <description>Saves the Staff Split Calculation.</description>
    <label>Staff Revenue Split</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>