force-app/main/default/objects/Engagement_Internal_Team__c/fields/Staff_Role__c.field-meta.xml
<CustomField>
    <fullName>Staff_Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Staff Role</label>
    <referenceTo>Staff_Role__c</referenceTo>
    <relationshipLabel>Engagement Internal Teams</relationshipLabel>
    <relationshipName>Engagement_Internal_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>