force-app/main/default/objects/Engagement_Internal_Team__c/validationRules/Is_Revenue_Accrual_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Revenue_Accrual_Locked</fullName>
    <active>false</active>
    <errorConditionFormula>$Setup.HL_General__c.Revenue_Accrual_Locked__c &amp;&amp; $Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;Accounting User&apos; &amp;&amp; (NOT(ISBLANK(Engagement__r.Current_Revenue_Accrual__c)) || NOT(ISBLANK( Engagement__r.Latest_Revenue_Accrual__c)))</errorConditionFormula>
    <errorMessage>Revenue Accrual is Locked and the Staff Roles cannot be changed at this time</errorMessage>
</ValidationRule>