force-app/main/default/objects/Engagement_Internal_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Engagement_Number__c</columns>
    <columns>Name_Link__c</columns>
    <columns>Role__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Engagement__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>